--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,16 @@
 
 *{
     font-family: "Poppins";
+    margin: 0;
+    padding: 0;
 
+}
+.body{
+    margin: 0;
+    padding: 0;
+}
+.html{
+    margin: 0;
+    padding: 0;
 }
 
