--- a/app/globals.css
+++ b/app/globals.css
@@ -18,4 +18,7 @@
     margin: 0;
     padding: 0;
 }
-
+.image {
+    width: 10em; /* Adjust the value based on your needs */
+    height: 10em;
+  }
